[gd_scene load_steps=25 format=2]

[ext_resource path="res://Assets/Fundos/Soccer_Ships_Arena_Fundo_1_PC.png" type="Texture" id=1]
[ext_resource path="res://ParallaxBackground.gd" type="Script" id=4]
[ext_resource path="res://Assets/Fundos/Soccer_Ships_Arena_Nebulosa_2_PC.png" type="Texture" id=5]
[ext_resource path="res://Assets/Fundos/Soccer_Ships_Arena_Nebulosa_3_PC.png" type="Texture" id=6]
[ext_resource path="res://TextureButton.gd" type="Script" id=7]
[ext_resource path="res://Menu.gd" type="Script" id=9]
[ext_resource path="res://Assets/Fundos/Soccer_Ships_Arena_Planetas_PC.png" type="Texture" id=22]
[ext_resource path="res://Assets/Fundos/Soccer_Ships_Arena_Esttrelas_PC.png" type="Texture" id=23]
[ext_resource path="res://Assets/Fundos/Soccer_Ships_Arena_Nebulosa_1_PC.png" type="Texture" id=24]
[ext_resource path="res://Assets/Menus/Menu_Inicial/Settings_Button3.png" type="Texture" id=25]
[ext_resource path="res://Assets/Menus/Menu_Inicial/Settings_Button2.png" type="Texture" id=26]
[ext_resource path="res://Assets/Menus/Menu_Inicial/Play_Button2.png" type="Texture" id=27]
[ext_resource path="res://Assets/Menus/Menu_Inicial/ChapaGames_Logo.png" type="Texture" id=28]
[ext_resource path="res://Assets/Menus/Menu_Inicial/Play_Button3.png" type="Texture" id=29]
[ext_resource path="res://Assets/Menus/Menu_Inicial/SS_Logo_Novo_2.png" type="Texture" id=30]
[ext_resource path="res://Assets/Menus/Menu_Inicial/How_To_Button1.png" type="Texture" id=31]
[ext_resource path="res://Assets/Menus/Menu_Inicial/Play_Button1.png" type="Texture" id=32]
[ext_resource path="res://Assets/Menus/Menu_Inicial/How_To_Button2.png" type="Texture" id=33]
[ext_resource path="res://Assets/Menus/Menu_Inicial/How_To_Button3.png" type="Texture" id=34]
[ext_resource path="res://Assets/Menus/Menu_Inicial/Settings_Button1.png" type="Texture" id=35]
[ext_resource path="res://Assets/Sounds/Blind Aim.mp3" type="AudioStream" id=36]
[ext_resource path="res://Assets/Menus/Menu_Inicial/Golden_Button3.png" type="Texture" id=37]
[ext_resource path="res://Assets/Menus/Menu_Inicial/Golden_Button1.png" type="Texture" id=38]
[ext_resource path="res://Assets/Menus/Menu_Inicial/Golden_Button2.png" type="Texture" id=39]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 286.0
margin_top = 320.0
margin_right = 1056.0
margin_bottom = 680.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 32 )
texture_pressed = ExtResource( 29 )
texture_hover = ExtResource( 27 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="How_to_Plat_Button" type="TextureButton" parent="."]
margin_left = 458.0
margin_top = 320.0
margin_right = 828.0
margin_bottom = 680.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 31 )
texture_pressed = ExtResource( 34 )
texture_hover = ExtResource( 33 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Setting_Button" type="TextureButton" parent="."]
margin_left = 550.0
margin_top = 320.0
margin_right = 920.0
margin_bottom = 680.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 35 )
texture_pressed = ExtResource( 25 )
texture_hover = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 4 )

[node name="Space" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Space"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )
centered = false

[node name="Stars" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 910, 512 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Stars"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 23 )
centered = false

[node name="PLanets" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/PLanets"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 22 )
centered = false

[node name="Nebulosa1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 910, 512 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Nebulosa1"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 24 )
centered = false

[node name="Nebulosa2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 910, 512 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Nebulosa2"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )
centered = false

[node name="Nebulosa3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 910, 512 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Nebulosa3"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )
centered = false

[node name="Logo" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 30 )
centered = false

[node name="Chapa_Gamens" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 28 )
centered = false

[node name="Blind" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 36 )

[node name="GG_Button" type="TextureButton" parent="."]
margin_left = 846.0
margin_top = 446.0
margin_right = 1116.0
margin_bottom = 716.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 38 )
texture_pressed = ExtResource( 37 )
texture_hover = ExtResource( 39 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TextureButton" to="TextureButton" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="GG_Button" to="." method="_on_GG_Button_pressed"]
